--- a/index.html
+++ b/index.html
@@ -1,187 +1,194 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Social Media Icons</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-   <style>
-      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Social Media Icons | Mnmyounus</title>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <style>
+         @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-      * {
-         margin: 0;
-         padding: 0;
-         box-sizing: border-box;
-         font-family: 'Poppins', sans-serif;
-      }
-
-      html, body {
-         height: 100%;
-         width: 100%;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         flex-direction: column;
-         background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
-      }
-
-      .wrapper {
-         display: flex;
-         flex-wrap: wrap;
-         justify-content: center;
-         width: 90%;
-         max-width: 800px;
-         margin-bottom: 40px;
-      }
-
-      .button {
-         display: inline-block;
-         height: 60px;
-         width: 60px;
-         margin: 10px;
-         background: #fff;
-         border-radius: 50px;
-         cursor: pointer;
-         box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-         transition: all 0.3s ease-out;
-         text-align: center;
-         overflow: hidden;
-         position: relative;
-      }
-
-      .button .icon {
-         height: 100%;
-         width: 100%;
-         line-height: 60px;
-         font-size: 25px;
-         color: #000;
-         transition: all 0.3s ease-out;
-      }
-
-      .button span {
-         display: none;
-         font-size: 16px;
-         color: #fff;
-         line-height: 60px;
-         position: absolute;
-         left: 70px;
-         transition: all 0.3s ease-out;
-      }
-
-      .button:hover {
-         width: 160px;
-      }
-
-      .button:hover span {
-         display: inline-block;
-      }
-
-      /* Social Media Colors (real colors) */
-      .button.instagram { background: #E1306C; }
-      .button.facebook { background: #4267B2; }
-      .button.twitter { background: #1DA1F2; }
-      .button.github { background: #333; }
-      .button.snapchat { background: #FFFC00; color: #000; }
-      .button.orcid { background: #A6CE39; }
-      .button.tiktok { background: #000; }
-      .button.tumblr { background: #35465C; }
-      .button.blogger { background: #F57D00; }
-      .button.threads { background: #0A0A0A; }
-      .button.devto { background: #BD081C; }
-      .button.pinterest { background: #F50057; }
-
-      /* Responsive Design */
-      @media (max-width: 768px) {
-         .button {
-            height: 50px;
-            width: 50px;
+         * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
          }
-         .button .icon {
+
+         html,
+         body {
+            display: grid;
+            height: 100%;
+            width: 100%;
+            place-items: center;
+            background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+         }
+
+         .wrapper .button {
+            display: inline-block;
+            height: 60px;
+            width: 60px;
+            float: left;
+            text-decoration: none;
+            margin: 0 5px;
+            overflow: hidden;
+            background: #fff;
+            border-radius: 50px;
+            cursor: pointer;
+            box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease-out;
+         }
+
+         .wrapper .button:hover {
+            width: 200px;
+         }
+
+         .wrapper .button .icon {
+            display: inline-block;
+            height: 60px;
+            width: 60px;
+            color: #000;
+            text-align: center;
+            border-radius: 50px;
+            box-sizing: border-box;
+            line-height: 60px;
+            transition: all 0.3s ease-out;
+         }
+
+         .wrapper .button .icon i {
+            font-size: 25px;
+            line-height: 60px;
+            transition: all 0.3s ease-out;
+         }
+
+         .wrapper .button:hover .icon i {
+            color: #fff;
+         }
+
+         .wrapper .button span {
             font-size: 20px;
-            line-height: 50px;
+            font-weight: 500;
+            line-height: 60px;
+            margin-left: 10px;
+            transition: all 0.3s ease-out;
          }
-         .button span {
-            font-size: 14px;
+
+         .wrapper .button:nth-child(1):hover .icon {
+            background: #4267B2;
          }
-      }
-   </style>
-</head>
-<body>
-   <div class="wrapper">
-      <!-- Social Media Buttons -->
-      <a href="#" class="button instagram" data-name="Instagram" data-url="https://www.instagram.com/mnmyounus/" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-instagram"></i></div>
-         <span>Instagram</span>
-      </a>
-      <a href="#" class="button facebook" data-name="Facebook" data-url="https://facebook.com/" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-facebook-f"></i></div>
-         <span>Facebook</span>
-      </a>
-      <a href="#" class="button twitter" data-name="Twitter" data-url="https://x.com/mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-twitter"></i></div>
-         <span>Twitter</span>
-      </a>
-      <a href="#" class="button github" data-name="GitHub" data-url="https://github.com/mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-github"></i></div>
-         <span>GitHub</span>
-      </a>
-      <a href="#" class="button snapchat" data-name="Snapchat" data-url="https://www.snapchat.com/add/mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-snapchat"></i></div>
-         <span>Snapchat</span>
-      </a>
-      <a href="#" class="button orcid" data-name="ORCID" data-url="https://orcid.org/0009-0003-4555-5683" onclick="handleClick(this)">
-         <div class="icon"><i class="fas fa-id-card"></i></div>
-         <span>ORCID</span>
-      </a>
-      <a href="#" class="button tiktok" data-name="TikTok" data-url="https://www.tiktok.com/@mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-tiktok"></i></div>
-         <span>TikTok</span>
-      </a>
-      <a href="#" class="button tumblr" data-name="Tumblr" data-url="https://www.tumblr.com/mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-tumblr"></i></div>
-         <span>Tumblr</span>
-      </a>
-      <a href="#" class="button blogger" data-name="Blogger" data-url="https://www.blogger.com/profile/00802157145964760570" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-blogger"></i></div>
-         <span>Blogger</span>
-      </a>
-      <a href="#" class="button threads" data-name="Threads" data-url="https://www.threads.net/@mnmyounus" onclick="handleClick(this)">
-         <div class="icon">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Threads_app_logo.png" alt="Threads Logo" />
-         </div>
-         <span>Threads</span>
-      </a>
-      <a href="#" class="button devto" data-name="Dev.to" data-url="https://dev.to/mnmyounus" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-dev"></i></div>
-         <span>Dev.to</span>
-      </a>
-      <a href="#" class="button pinterest" data-name="Pinterest" data-url="https://pinterest.com/mnmyounus1" onclick="handleClick(this)">
-         <div class="icon"><i class="fab fa-pinterest"></i></div>
-         <span>Pinterest</span>
-      </a>
-   </div>
 
-   <script>
-      let clicked = false;
-
-      function handleClick(button) {
-         const platformName = button.getAttribute('data-name');
-         const platformUrl = button.getAttribute('data-url');
-
-         // First click: Show name and color the button
-         if (!clicked) {
-            button.style.backgroundColor = getComputedStyle(button).backgroundColor;
-            button.querySelector("span").style.display = "inline-block";  // Show the platform name
-            button.querySelector("span").innerText = platformName;  // Set the name
-            clicked = true;
-         } 
-         // Second click: Open the link in a new tab
-         else {
-            window.open(platformUrl, "_blank");
-            clicked = false;  // Reset clicked state for the next time
+         .wrapper .button:nth-child(2):hover .icon {
+            background: #1DA1F2;
          }
-      }
-   </script>
-</body>
-         </html>
-            
+
+         .wrapper .button:nth-child(3):hover .icon {
+            background: #E1306C;
+         }
+
+         .wrapper .button:nth-child(4):hover .icon {
+            background: #333;
+         }
+
+         .wrapper .button:nth-child(5):hover .icon {
+            background: #FFFC00;
+         }
+
+         .certificates, .additional-links {
+            margin-top: 20px;
+         }
+
+         .certificates a, .additional-links a {
+            text-decoration: none;
+            display: block;
+            margin: 5px 0;
+            color: #007BFF;
+            font-size: 18px;
+         }
+
+         .certificates a:hover, .additional-links a:hover {
+            text-decoration: underline;
+         }
+      </style>
+   </head>
+   <body>
+      <div class="wrapper">
+         <a href="https://www.instagram.com/mnmyounus/" class="button">
+            <div class="icon">
+               <i class="fab fa-instagram"></i>
+            </div>
+            <span>Instagram</span>
+         </a>
+         <a href="https://facebook.com/" class="button">
+            <div class="icon">
+               <i class="fab fa-facebook-f"></i>
+            </div>
+            <span>Facebook</span>
+         </a>
+         <a href="https://x.com/mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-twitter"></i>
+            </div>
+            <span>Twitter</span>
+         </a>
+         <a href="https://github.com/mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-github"></i>
+            </div>
+            <span>GitHub</span>
+         </a>
+         <a href="https://www.snapchat.com/add/mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-snapchat"></i>
+            </div>
+            <span>Snapchat</span>
+         </a>
+         <a href="https://orcid.org/0009-0003-4555-5683" class="button">
+            <div class="icon">
+               <i class="fas fa-id-card"></i>
+            </div>
+            <span>ORCID</span>
+         </a>
+         <a href="https://www.tiktok.com/@mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-tiktok"></i>
+            </div>
+            <span>TikTok</span>
+         </a>
+         <a href="https://www.tumblr.com/mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-tumblr"></i>
+            </div>
+            <span>Tumblr</span>
+         </a>
+         <a href="https://www.blogger.com/profile/00802157145964760570" class="button">
+            <div class="icon">
+               <i class="fab fa-blogger"></i>
+            </div>
+            <span>Blogger</span>
+         </a>
+         <a href="https://www.threads.net/@mnmyounus" class="button">
+            <div class="icon">
+               <i class="fas fa-thread"></i>
+            </div>
+            <span>Threads</span>
+         </a>
+         <a href="https://dev.to/mnmyounus" class="button">
+            <div class="icon">
+               <i class="fab fa-dev"></i>
+            </div>
+            <span>Dev.to</span>
+         </a>
+         <a href="https://pinterest.com/mnmyounus1" class="button">
+            <div class="icon">
+               <i class="fab fa-pinterest"></i>
+            </div>
+            <span>Pinterest</span>
+         </a>
+      </div>
+
+      <div class="certificates">
+         <h2>Certificates</h2>
+         <a href="https://www.skillshare.com/en/user/mnmyounus">Skillshare Profile</a>
+         <a href="https://www.open.edu/openlearn/profiles/zs316476">OpenLearn Profile</a>
+      </div>
+   </body>
+</html>
