--- a/index.html
+++ b/index.html
@@ -1,182 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Social Media Links| Mnmyounus</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-      <style>
-         @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-
-         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-         }
-
-         html,
-         body {
-            display: grid;
-            height: 100%;
-            width: 100%;
-            place-items: center;
-            background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
-         }
-
-         .wrapper {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-         }
-
-         .wrapper .button {
-            display: inline-block;
-            height: 60px;
-            width: 60px;
-            margin: 10px;
-            overflow: hidden;
-            background: #fff;
-            border-radius: 50px;
-            cursor: pointer;
-            box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease-out;
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-         }
-
-         .wrapper .button:hover {
-            width: 200px;
-         }
-
-         .wrapper .button .icon {
-            display: inline-block;
-            height: 60px;
-            width: 60px;
-            color: #000;
-            text-align: center;
-            border-radius: 50px;
-            box-sizing: border-box;
-            line-height: 60px;
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button .icon i {
-            font-size: 25px;
-            line-height: 60px;
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button:hover .icon i {
-            color: #fff;
-         }
-
-         .wrapper .button span {
-            font-size: 16px;
-            font-weight: 500;
-            line-height: 60px;
-            margin-left: 10px;
-            transition: all 0.3s ease-out;
-         }
-
-         .wrapper .button:nth-child(1):hover .icon {
-            background: #4267B2;
-         }
-
-         .wrapper .button:nth-child(2):hover .icon {
-            background: #1DA1F2;
-         }
-
-         .wrapper .button:nth-child(3):hover .icon {
-            background: #E1306C;
-         }
-
-         .wrapper .button:nth-child(4):hover .icon {
-            background: #333;
-         }
-
-         .wrapper .button:nth-child(5):hover .icon {
-            background: #FFFC00;
-         }
-
-         .wrapper .button:nth-child(10):hover .icon {
-            background: #00B7B8; /* Threads color */
-         }
-
-         .certificates, .additional-links {
-            margin-top: 20px;
-         }
-
-         .certificates a, .additional-links a {
-            text-decoration: none;
-            display: block;
-            margin: 5px 0;
-            color: #007BFF;
-            font-size: 18px;
-         }
-
-         .certificates a:hover, .additional-links a:hover {
-            text-decoration: underline;
-         }
-
-         @media screen and (max-width: 768px) {
-            .wrapper .button {
-               width: 50px;
-               height: 50px;
-            }
-
-            .wrapper .button span {
-               display: none;
-            }
-         }
-
-         @media screen and (max-width: 480px) {
-            .wrapper .button {
-               width: 40px;
-               height: 40px;
-            }
-
-            .wrapper .button span {
-               display: none;
-            }
-         }
-      </style>
-   </head>
-   <body>
-      <div class="wrapper">
-         <a href="https://www.whatsapp.com/mnmyounus/" class="button">
-            <div class="icon">
-               <i class="fab fa-whatsapp"></i>
-            </div>
-            <span>WhatsApp</span>
-         </a>
-          <a href="https://www.telegram.com/mnmyounus/" class="button">
-            <div class="icon">
-               <i class="fab fa-telegram"></i>
-            </div>
-            <span>Telegram</span>
-         </a>
-         <a href="mailto:mnmyounus@gmail.com" class="button">
-            <div class="icon">
-               <i class="fab fa-email"></i>
-            </div>
-            <span>E-mail</span>
-         </a>
-         <a href="smsto:+94701715058" class="button">
-            <div class="icon">
-               <i class="fab fa-sms"></i>
-            </div>
-            <span>SMS</span>
-         </a>
-          <a href="tel:+94701715058"class="button">
-            <div class="icon">
-               <i class="fab fa-call"></i>
-            </div>
-            <span>Call</span>
-         </a>
-
+<head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Connect with Mnmyounus on various social media platforms.">
+   <title>Social Media Links | Mnmyounus</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+   <style>
+      @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+      * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+      html, body { display: grid; height: 100%; width: 100%; place-items: center; background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%); }
+      .wrapper { display: flex; flex-wrap: wrap; justify-content: center; }
+      .wrapper .button { display: flex; align-items: center; justify-content: center; width: 60px; height: 60px; margin: 10px; background: #fff; border-radius: 50%; cursor: pointer; box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1); transition: all 0.3s; text-decoration: none; }
+      .wrapper .button:hover { width: 200px; }
+      .wrapper .button .icon { display: flex; align-items: center; justify-content: center; width: 60px; height: 60px; border-radius: 50%; background: #000; color: #fff; font-size: 25px; transition: background 0.3s; }
+      .wrapper .button span { font-size: 16px; font-weight: 500; margin-left: 10px; transition: opacity 0.3s; opacity: 0; visibility: hidden; }
+      .wrapper .button:hover span { opacity: 1; visibility: visible; }
+      .wrapper .button:nth-child(1):hover .icon { background: #25D366; }
+      .wrapper .button:nth-child(2):hover .icon { background: #0088CC; }
+      .wrapper .button:nth-child(3):hover .icon { background: #EA4335; }
+      .wrapper .button:nth-child(4):hover .icon { background: #34A853; }
+      .wrapper .button:nth-child(5):hover .icon { background: #4285F4; }
+      /* Threads Button */
+      .wrapper .button:nth-child(10):hover .icon { background: #00B7B8; }
+      .certificates, .additional-links { margin-top: 20px; text-align: center; }
+      .certificates a, .additional-links a { text-decoration: none; color: #007BFF; font-size: 18px; display: block; margin: 5px 0; }
+      .certificates a:hover, .additional-links a:hover { text-decoration: underline; }
+      @media screen and (max-width: 768px) {
+         .wrapper .button { width: 50px; height: 50px; }
+         .wrapper .button span { display: none; }
+      }
+   </style>
+</head>
+<body>
+   <div class="wrapper">
+      <a href="https://wa.me/1234567890" class="button" aria-label="WhatsApp">
+         <div class="icon"><i class="fab fa-whatsapp"></i></div>
+         <span>WhatsApp</span>
+      </a>
+      <a href="https://t.me/mnmyounus" class="button" aria-label="Telegram">
+         <div class="icon"><i class="fab fa-telegram"></i></div>
+         <span>Telegram</span>
+      </a>
+      <a href="mailto:mnmyounus@gmail.com" class="button" aria-label="E-mail">
+         <div class="icon"><i class="fas fa-envelope"></i></div>
+         <span>E-mail</span>
+      </a>
+      <a href="sms:+94701715058" class="button" aria-label="SMS">
+         <div class="icon"><i class="fas fa-sms"></i></div>
+         <span>SMS</span>
+      </a>
+      <a href="tel:+94701715058" class="button" aria-label="Call">
+         <div class="icon"><i class="fas fa-phone"></i></div>
+         <span>Call</span>
+      </a>
+      
          <a href="https://www.wechat.com/mnmyounus/" class="button">
             <div class="icon">
                <i class="fab fa-wechat"></i>
@@ -255,13 +133,14 @@
                <i class="fab fa-pinterest"></i>
             </div>
             <span>Pinterest</span>
-         </a>
-      </div>
-
-      <div class="certificates">
-         <h2>Certificates</h2>
-         <a href="https://www.skillshare.com/en/user/mnmyounus">Skillshare Profile</a>
-         <a href="https://www.open.edu/openlearn/profiles/zs316476">OpenLearn Profile</a>
-      </div>
-   </body>
-</html>
+               </a>
+      <!-- Add more buttons as needed -->
+   </div>
+   <div class="certificates">
+      <h2>Certificates</h2>
+      <a href="https://www.skillshare.com/en/user/mnmyounus">Skillshare Profile</a>
+      <a href="https://www.open.edu/openlearn/profiles/zs316476">OpenLearn Profile</a>
+   </div>
+</body>
+                                                                                     </html>
+                                                                                     
